--- a/public/portfolios/cloud-light/index.html
+++ b/public/portfolios/cloud-light/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Cloud Light">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,9 +116,15 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/cloud-light/ending-storm-steens-wilderness.html">
-          <img src="/assets/photographs/thumbs/ending-storm-steens-wilderness.jpg" alt="Ending Storm">
-          <h4>Ending Storm</h4>
+        <a href="/portfolios/cloud-light/clearing-storm-red-hawk-vineyard.html">
+          <img src="/assets/photographs/thumbs/clearing-storm-red-hawk-vineyard.jpg" alt="Clearing Storm">
+          <h4>Clearing Storm</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/cloud-light/cloud-maze-salinas-valley.html">
+          <img src="/assets/photographs/thumbs/cloud-maze-salinas-valley.jpg" alt="Cloud Maze">
+          <h4>Cloud Maze</h4>
         </a>
       </div>
 <div class="thumb">
@@ -128,9 +134,39 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/cloud-light/clouds-point-lobos-sunset.html">
+          <img src="/assets/photographs/thumbs/clouds-point-lobos-sunset.jpg" alt="Winter Sunset">
+          <h4>Winter Sunset</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/cloud-light/dream-clouds-ii-zion-national-park.html">
           <img src="/assets/photographs/thumbs/dream-clouds-ii-zion-national-park.jpg" alt="Dream Clouds II">
           <h4>Dream Clouds II</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/cloud-light/dream-clouds-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/dream-clouds-zion-national-park.jpg" alt="Dream Clouds">
+          <h4>Dream Clouds</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/cloud-light/ending-storm-steens-wilderness.html">
+          <img src="/assets/photographs/thumbs/ending-storm-steens-wilderness.jpg" alt="Ending Storm">
+          <h4>Ending Storm</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/cloud-light/fiery-skies-cortena.html">
+          <img src="/assets/photographs/thumbs/fiery-skies-cortena.jpg" alt="Fiery Skies">
+          <h4>Fiery Skies</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/cloud-light/cloud-light.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Cloud Light">
+          <h4>Cloud Light</h4>
         </a>
       </div>
 <div class="thumb">
@@ -146,45 +182,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/cloud-light/clouds-point-lobos-sunset.html">
-          <img src="/assets/photographs/thumbs/clouds-point-lobos-sunset.jpg" alt="Winter Sunset">
-          <h4>Winter Sunset</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/cloud-light/clearing-storm-red-hawk-vineyard.html">
-          <img src="/assets/photographs/thumbs/clearing-storm-red-hawk-vineyard.jpg" alt="Clearing Storm">
-          <h4>Clearing Storm</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/cloud-light/fiery-skies-cortena.html">
-          <img src="/assets/photographs/thumbs/fiery-skies-cortena.jpg" alt="Fiery Skies">
-          <h4>Fiery Skies</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/cloud-light/cloud-maze-salinas-valley.html">
-          <img src="/assets/photographs/thumbs/cloud-maze-salinas-valley.jpg" alt="Cloud Maze">
-          <h4>Cloud Maze</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/cloud-light/dream-clouds-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/dream-clouds-zion-national-park.jpg" alt="Dream Clouds">
-          <h4>Dream Clouds</h4>
-        </a>
-      </div>
-<div class="thumb">
         <a href="/portfolios/cloud-light/the-goddess-wire-mesa.html">
           <img src="/assets/photographs/thumbs/the-goddess-wire-mesa.jpg" alt="The Goddess">
           <h4>The Goddess</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/cloud-light/mammatus-clouds-bend-oregon.html">
-          <img src="/assets/photographs/thumbs/mammatus-clouds-bend-oregon.jpg" alt="Mammatus Clouds">
-          <h4>Mammatus Clouds</h4>
         </a>
       </div>
       </div>
