--- a/public/portfolios/icons-of-agriculture-iii/index.html
+++ b/public/portfolios/icons-of-agriculture-iii/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Icons of Agriculture III">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,30 +116,6 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/gas-tank-artois.html">
-          <img src="/assets/photographs/thumbs/gas-tank-artois.jpg" alt="Gas Tank">
-          <h4>Gas Tank</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/the-blue-door-condon.html">
-          <img src="/assets/photographs/thumbs/the-blue-door-condon.jpg" alt="The Blue Door">
-          <h4>The Blue Door</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/filtration-colby.html">
-          <img src="/assets/photographs/thumbs/filtration-colby.jpg" alt="Dryer, Large Granary">
-          <h4>Dryer, Large Granary</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/silo-102-cortena.html">
-          <img src="/assets/photographs/thumbs/silo-102-cortena.jpg" alt="Silo 102">
-          <h4>Silo 102</h4>
-        </a>
-      </div>
-<div class="thumb">
         <a href="/portfolios/icons-of-agriculture-iii/chutes-davenport.html">
           <img src="/assets/photographs/thumbs/chutes-davenport.jpg" alt="Chutes and Ladders">
           <h4>Chutes and Ladders</h4>
@@ -152,51 +128,15 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/the-grand-staircase-bend.html">
-          <img src="/assets/photographs/thumbs/the-grand-staircase-bend.jpg" alt="The Grand Staircase">
-          <h4>The Grand Staircase</h4>
+        <a href="/portfolios/icons-of-agriculture-iii/filtration-colby.html">
+          <img src="/assets/photographs/thumbs/filtration-colby.jpg" alt="Dryer, Large Granary">
+          <h4>Dryer, Large Granary</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/granary-endicott.html">
-          <img src="/assets/photographs/thumbs/granary-endicott.jpg" alt="Granary in Grey">
-          <h4>Granary in Grey</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/the-bird-that-would-not-leave-garfield.html">
-          <img src="/assets/photographs/thumbs/the-bird-that-would-not-leave-garfield.jpg" alt="The Bird that Refused to Leave">
-          <h4>The Bird that Refused to Leave</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/support-straps-la-crosse.html">
-          <img src="/assets/photographs/thumbs/support-straps-la-crosse.jpg" alt="Exposed">
-          <h4>Exposed</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/glowing-silos-lions-ferry-road.html">
-          <img src="/assets/photographs/thumbs/glowing-silos-lions-ferry-road.jpg" alt="Glowing Silos">
-          <h4>Glowing Silos</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/weathered-pipes-macdoel.html">
-          <img src="/assets/photographs/thumbs/weathered-pipes-macdoel.jpg" alt="Weathered Pipes">
-          <h4>Weathered Pipes</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/red-coupler-palouse.html">
-          <img src="/assets/photographs/thumbs/red-coupler-palouse.jpg" alt="Red Coupler">
-          <h4>Red Coupler</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iii/waste-bin-palouse-city.html">
-          <img src="/assets/photographs/thumbs/waste-bin-palouse-city.jpg" alt="Waste Bin">
-          <h4>Waste Bin</h4>
+        <a href="/portfolios/icons-of-agriculture-iii/gas-tank-artois.html">
+          <img src="/assets/photographs/thumbs/gas-tank-artois.jpg" alt="Gas Tank">
+          <h4>Gas Tank</h4>
         </a>
       </div>
 <div class="thumb">
@@ -206,9 +146,75 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/glowing-silos-lions-ferry-road.html">
+          <img src="/assets/photographs/thumbs/glowing-silos-lions-ferry-road.jpg" alt="Glowing Silos">
+          <h4>Glowing Silos</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/icons-of-agriculture-iii/grain-loader-willows.html">
           <img src="/assets/photographs/thumbs/grain-loader-willows.jpg" alt="Grain Loader">
           <h4>Grain Loader</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/granary-endicott.html">
+          <img src="/assets/photographs/thumbs/granary-endicott.jpg" alt="Granary in Grey">
+          <h4>Granary in Grey</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/icons-of-agriculture-iii.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Icons of Agriculture III">
+          <h4>Icons of Agriculture III</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/red-coupler-palouse.html">
+          <img src="/assets/photographs/thumbs/red-coupler-palouse.jpg" alt="Red Coupler">
+          <h4>Red Coupler</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/silo-102-cortena.html">
+          <img src="/assets/photographs/thumbs/silo-102-cortena.jpg" alt="Silo 102">
+          <h4>Silo 102</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/support-straps-la-crosse.html">
+          <img src="/assets/photographs/thumbs/support-straps-la-crosse.jpg" alt="Exposed">
+          <h4>Exposed</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/the-bird-that-would-not-leave-garfield.html">
+          <img src="/assets/photographs/thumbs/the-bird-that-would-not-leave-garfield.jpg" alt="The Bird that Refused to Leave">
+          <h4>The Bird that Refused to Leave</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/the-blue-door-condon.html">
+          <img src="/assets/photographs/thumbs/the-blue-door-condon.jpg" alt="The Blue Door">
+          <h4>The Blue Door</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/the-grand-staircase-bend.html">
+          <img src="/assets/photographs/thumbs/the-grand-staircase-bend.jpg" alt="The Grand Staircase">
+          <h4>The Grand Staircase</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/waste-bin-palouse-city.html">
+          <img src="/assets/photographs/thumbs/waste-bin-palouse-city.jpg" alt="Waste Bin">
+          <h4>Waste Bin</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iii/weathered-pipes-macdoel.html">
+          <img src="/assets/photographs/thumbs/weathered-pipes-macdoel.jpg" alt="Weathered Pipes">
+          <h4>Weathered Pipes</h4>
         </a>
       </div>
       </div>
