--- a/public/portfolios/icons-of-agriculture-iv/index.html
+++ b/public/portfolios/icons-of-agriculture-iv/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Icons of Agriculture IV">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,15 +116,9 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/stairs-cheney.html">
-          <img src="/assets/photographs/thumbs/stairs-cheney.jpg" alt="Stairs">
-          <h4>Stairs</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/granary-wall-detail-chandon.html">
-          <img src="/assets/photographs/thumbs/granary-wall-detail-chandon.jpg" alt="Cement Silos">
-          <h4>Cement Silos</h4>
+        <a href="/portfolios/icons-of-agriculture-iv/glowing-silos-willows.html">
+          <img src="/assets/photographs/thumbs/glowing-silos-willows.jpg" alt="Glowing Silos">
+          <h4>Glowing Silos</h4>
         </a>
       </div>
 <div class="thumb">
@@ -140,39 +134,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/ventilation-palouse.html">
-          <img src="/assets/photographs/thumbs/ventilation-palouse.jpg" alt="Ventilation">
-          <h4>Ventilation</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/shute-and-ladder-delevan.html">
-          <img src="/assets/photographs/thumbs/shute-and-ladder-delevan.jpg" alt="Shute and Ladder">
-          <h4>Shute and Ladder</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/tbd.html">
-          <img src="/assets/photographs/thumbs/tbd.jpg" alt="Silo Details">
-          <h4>Silo Details</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/irrigation-pipes-on-truck-williams.html">
-          <img src="/assets/photographs/thumbs/irrigation-pipes-on-truck-williams.jpg" alt="Pipes on Truck">
-          <h4>Pipes on Truck</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/stacked-pipes-winters.html">
-          <img src="/assets/photographs/thumbs/stacked-pipes-winters.jpg" alt="Stacked Pipes">
-          <h4>Stacked Pipes</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/old-granary-walters.html">
-          <img src="/assets/photographs/thumbs/old-granary-walters.jpg" alt="Granary and Moon">
-          <h4>Granary and Moon</h4>
+        <a href="/portfolios/icons-of-agriculture-iv/granary-wall-detail-chandon.html">
+          <img src="/assets/photographs/thumbs/granary-wall-detail-chandon.jpg" alt="Cement Silos">
+          <h4>Cement Silos</h4>
         </a>
       </div>
 <div class="thumb">
@@ -182,9 +146,33 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iv/icons-of-agriculture-iv.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Icons of Agriculture IV">
+          <h4>Icons of Agriculture IV</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iv/irrigation-pipes-on-truck-williams.html">
+          <img src="/assets/photographs/thumbs/irrigation-pipes-on-truck-williams.jpg" alt="Pipes on Truck">
+          <h4>Pipes on Truck</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iv/old-granary-walters.html">
+          <img src="/assets/photographs/thumbs/old-granary-walters.jpg" alt="Granary and Moon">
+          <h4>Granary and Moon</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/icons-of-agriculture-iv/ramshackle-granary-winona.html">
           <img src="/assets/photographs/thumbs/ramshackle-granary-winona.jpg" alt="Ramshackle Granary">
           <h4>Ramshackle Granary</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iv/shute-and-ladder-delevan.html">
+          <img src="/assets/photographs/thumbs/shute-and-ladder-delevan.jpg" alt="Shute and Ladder">
+          <h4>Shute and Ladder</h4>
         </a>
       </div>
 <div class="thumb">
@@ -194,9 +182,21 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-iv/glowing-silos-willows.html">
-          <img src="/assets/photographs/thumbs/glowing-silos-willows.jpg" alt="Glowing Silos">
-          <h4>Glowing Silos</h4>
+        <a href="/portfolios/icons-of-agriculture-iv/stacked-pipes-winters.html">
+          <img src="/assets/photographs/thumbs/stacked-pipes-winters.jpg" alt="Stacked Pipes">
+          <h4>Stacked Pipes</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iv/stairs-cheney.html">
+          <img src="/assets/photographs/thumbs/stairs-cheney.jpg" alt="Stairs">
+          <h4>Stairs</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-iv/ventilation-palouse.html">
+          <img src="/assets/photographs/thumbs/ventilation-palouse.jpg" alt="Ventilation">
+          <h4>Ventilation</h4>
         </a>
       </div>
       </div>
