--- a/public/portfolios/icons-of-agriculture/index.html
+++ b/public/portfolios/icons-of-agriculture/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Icons of Agriculture">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,75 +116,9 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/grain-truck-artois-california.html">
-          <img src="/assets/photographs/thumbs/grain-truck-artois-california.jpg" alt="Grain Truck">
-          <h4>Grain Truck</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/granary-detail-artois.html">
-          <img src="/assets/photographs/thumbs/granary-detail-artois.jpg" alt="Pastels">
-          <h4>Pastels</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/grain-dryer-colby.html">
-          <img src="/assets/photographs/thumbs/grain-dryer-colby.jpg" alt="Grain Dryer">
-          <h4>Grain Dryer</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/electric-cortena.html">
-          <img src="/assets/photographs/thumbs/electric-cortena.jpg" alt="Electric">
-          <h4>Electric</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/conveyance-delevan.html">
-          <img src="/assets/photographs/thumbs/conveyance-delevan.jpg" alt="Conveyance">
-          <h4>Conveyance</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/elevator-detail-delevan.html">
-          <img src="/assets/photographs/thumbs/elevator-detail-delevan.jpg" alt="Glowing Stack">
-          <h4>Glowing Stack</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/granary-detail-dufur.html">
-          <img src="/assets/photographs/thumbs/granary-detail-dufur.jpg" alt="Granary Ladder">
-          <h4>Granary Ladder</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/wall-street-dufur.html">
-          <img src="/assets/photographs/thumbs/wall-street-dufur.jpg" alt="Wall Street">
-          <h4>Wall Street</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/holding-silos-horace.html">
-          <img src="/assets/photographs/thumbs/holding-silos-horace.jpg" alt="Holding Silos">
-          <h4>Holding Silos</h4>
-        </a>
-      </div>
-<div class="thumb">
         <a href="/portfolios/icons-of-agriculture/abandoned-granary-ione.html">
           <img src="/assets/photographs/thumbs/abandoned-granary-ione.jpg" alt="Abandoned">
           <h4>Abandoned</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/granary-and-field-in-rain-kellog-hollow.html">
-          <img src="/assets/photographs/thumbs/granary-and-field-in-rain-kellog-hollow.jpg" alt="Granary and Field in Rain">
-          <h4>Granary and Field in Rain</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/inside-view-kennedy-ford.html">
-          <img src="/assets/photographs/thumbs/inside-view-kennedy-ford.jpg" alt="Inside View">
-          <h4>Inside View</h4>
         </a>
       </div>
 <div class="thumb">
@@ -194,9 +128,75 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/stacks-and-stairs-delevan.html">
-          <img src="/assets/photographs/thumbs/stacks-and-stairs-delevan.jpg" alt="Stacks and Stairs">
-          <h4>Stacks and Stairs</h4>
+        <a href="/portfolios/icons-of-agriculture/conveyance-delevan.html">
+          <img src="/assets/photographs/thumbs/conveyance-delevan.jpg" alt="Conveyance">
+          <h4>Conveyance</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/electric-cortena.html">
+          <img src="/assets/photographs/thumbs/electric-cortena.jpg" alt="Electric">
+          <h4>Electric</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/elevator-detail-delevan.html">
+          <img src="/assets/photographs/thumbs/elevator-detail-delevan.jpg" alt="Glowing Stack">
+          <h4>Glowing Stack</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/emergency-use-only-ritzville.html">
+          <img src="/assets/photographs/thumbs/emergency-use-only-ritzville.jpg" alt="Emergency Use Only">
+          <h4>Emergency Use Only</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/grain-dryer-colby.html">
+          <img src="/assets/photographs/thumbs/grain-dryer-colby.jpg" alt="Grain Dryer">
+          <h4>Grain Dryer</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/grain-truck-artois-california.html">
+          <img src="/assets/photographs/thumbs/grain-truck-artois-california.jpg" alt="Grain Truck">
+          <h4>Grain Truck</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/granary-and-field-in-rain-kellog-hollow.html">
+          <img src="/assets/photographs/thumbs/granary-and-field-in-rain-kellog-hollow.jpg" alt="Granary and Field in Rain">
+          <h4>Granary and Field in Rain</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/granary-detail-artois.html">
+          <img src="/assets/photographs/thumbs/granary-detail-artois.jpg" alt="Pastels">
+          <h4>Pastels</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/granary-detail-dufur.html">
+          <img src="/assets/photographs/thumbs/granary-detail-dufur.jpg" alt="Granary Ladder">
+          <h4>Granary Ladder</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/holding-silos-horace.html">
+          <img src="/assets/photographs/thumbs/holding-silos-horace.jpg" alt="Holding Silos">
+          <h4>Holding Silos</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/icons-of-agriculture.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Icons of Agriculture">
+          <h4>Icons of Agriculture</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/inside-view-kennedy-ford.html">
+          <img src="/assets/photographs/thumbs/inside-view-kennedy-ford.jpg" alt="Inside View">
+          <h4>Inside View</h4>
         </a>
       </div>
 <div class="thumb">
@@ -212,9 +212,15 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture/emergency-use-only-ritzville.html">
-          <img src="/assets/photographs/thumbs/emergency-use-only-ritzville.jpg" alt="Emergency Use Only">
-          <h4>Emergency Use Only</h4>
+        <a href="/portfolios/icons-of-agriculture/stacks-and-stairs-delevan.html">
+          <img src="/assets/photographs/thumbs/stacks-and-stairs-delevan.jpg" alt="Stacks and Stairs">
+          <h4>Stacks and Stairs</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture/wall-street-dufur.html">
+          <img src="/assets/photographs/thumbs/wall-street-dufur.jpg" alt="Wall Street">
+          <h4>Wall Street</h4>
         </a>
       </div>
       </div>
