--- a/public/portfolios/the-american-west-ii/index.html
+++ b/public/portfolios/the-american-west-ii/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="The American West II">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,6 +116,18 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
+        <a href="/portfolios/the-american-west-ii/aspen-reflections-sierra-nevada.html">
+          <img src="/assets/photographs/thumbs/aspen-reflections-sierra-nevada.jpg" alt="Aspen Reflections">
+          <h4>Aspen Reflections</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west-ii/cape-royal-grand-canyon.html">
+          <img src="/assets/photographs/thumbs/cape-royal-grand-canyon.jpg" alt="Cape Royal">
+          <h4>Cape Royal</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/the-american-west-ii/clearing-storm-steens-junction.html">
           <img src="/assets/photographs/thumbs/clearing-storm-steens-junction.jpg" alt="Clearing Storm">
           <h4>Clearing Storm</h4>
@@ -128,39 +140,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west-ii/two-oaks-sierra-foothills.html">
-          <img src="/assets/photographs/thumbs/two-oaks-sierra-foothills.jpg" alt="Two Oaks">
-          <h4>Two Oaks</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/midnight-over-clarno-john-day.html">
-          <img src="/assets/photographs/thumbs/midnight-over-clarno-john-day.jpg" alt="Midnight over Clarno">
-          <h4>Midnight over Clarno</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/el-captain-meadow-yosemite-national-park.html">
-          <img src="/assets/photographs/thumbs/el-captain-meadow-yosemite-national-park.jpg" alt="Winter Oak">
-          <h4>Winter Oak</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/san-juan-river-goosenecks.html">
-          <img src="/assets/photographs/thumbs/san-juan-river-goosenecks.jpg" alt="San Juan River">
-          <h4>San Juan River</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/aspen-reflections-sierra-nevada.html">
-          <img src="/assets/photographs/thumbs/aspen-reflections-sierra-nevada.jpg" alt="Aspen Reflections">
-          <h4>Aspen Reflections</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/raindrops-on-leaves-sierra-nevada.html">
-          <img src="/assets/photographs/thumbs/raindrops-on-leaves-sierra-nevada.jpg" alt="Raindrops on Leaves">
-          <h4>Raindrops on Leaves</h4>
+        <a href="/portfolios/the-american-west-ii/colorado-river-navajo-bridge.html">
+          <img src="/assets/photographs/thumbs/colorado-river-navajo-bridge.jpg" alt="Colorado River">
+          <h4>Colorado River</h4>
         </a>
       </div>
 <div class="thumb">
@@ -170,39 +152,15 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west-ii/twilight-painted-hills.html">
-          <img src="/assets/photographs/thumbs/twilight-painted-hills.jpg" alt="Twilight, Painted Hills">
-          <h4>Twilight, Painted Hills</h4>
+        <a href="/portfolios/the-american-west-ii/el-captain-meadow-yosemite-national-park.html">
+          <img src="/assets/photographs/thumbs/el-captain-meadow-yosemite-national-park.jpg" alt="Winter Oak">
+          <h4>Winter Oak</h4>
         </a>
       </div>
 <div class="thumb">
         <a href="/portfolios/the-american-west-ii/four-aspens-crested-butte.html">
           <img src="/assets/photographs/thumbs/four-aspens-crested-butte.jpg" alt="Four Aspens, Twilight">
           <h4>Four Aspens, Twilight</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/twilight-garrapata.html">
-          <img src="/assets/photographs/thumbs/twilight-garrapata.jpg" alt="Twilight, Garrapata">
-          <h4>Twilight, Garrapata</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/moonrise-waitsburg.html">
-          <img src="/assets/photographs/thumbs/moonrise-waitsburg.jpg" alt="Moonrise">
-          <h4>Moonrise</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/cape-royal-grand-canyon.html">
-          <img src="/assets/photographs/thumbs/cape-royal-grand-canyon.jpg" alt="Cape Royal">
-          <h4>Cape Royal</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west-ii/colorado-river-navajo-bridge.html">
-          <img src="/assets/photographs/thumbs/colorado-river-navajo-bridge.jpg" alt="Colorado River">
-          <h4>Colorado River</h4>
         </a>
       </div>
 <div class="thumb">
@@ -218,27 +176,45 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/the-american-west-ii/the-american-west-ii.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="The American West II">
+          <h4>The American West II</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/the-american-west-ii/lightning-white-mountains.html">
           <img src="/assets/photographs/thumbs/lightning-white-mountains.jpg" alt="Lightning">
           <h4>Lightning</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west-ii/luminous-grasses-oregon.html">
-          <img src="/assets/photographs/thumbs/luminous-grasses-oregon.jpg" alt="Luminous Grasses">
-          <h4>Luminous Grasses</h4>
+        <a href="/portfolios/the-american-west-ii/midnight-over-clarno-john-day.html">
+          <img src="/assets/photographs/thumbs/midnight-over-clarno-john-day.jpg" alt="Midnight over Clarno">
+          <h4>Midnight over Clarno</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west-ii/river-dance-arizona.html">
-          <img src="/assets/photographs/thumbs/river-dance-arizona.jpg" alt="River Dance">
-          <h4>River Dance</h4>
+        <a href="/portfolios/the-american-west-ii/moonrise-waitsburg.html">
+          <img src="/assets/photographs/thumbs/moonrise-waitsburg.jpg" alt="Moonrise">
+          <h4>Moonrise</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west-ii/raindrops-on-leaves-sierra-nevada.html">
+          <img src="/assets/photographs/thumbs/raindrops-on-leaves-sierra-nevada.jpg" alt="Raindrops on Leaves">
+          <h4>Raindrops on Leaves</h4>
         </a>
       </div>
 <div class="thumb">
         <a href="/portfolios/the-american-west-ii/river-dance-horseshoe-overlook.html">
           <img src="/assets/photographs/thumbs/river-dance-horseshoe-overlook.jpg" alt="River Dance">
           <h4>River Dance</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west-ii/san-juan-river-goosenecks.html">
+          <img src="/assets/photographs/thumbs/san-juan-river-goosenecks.jpg" alt="San Juan River">
+          <h4>San Juan River</h4>
         </a>
       </div>
 <div class="thumb">
@@ -254,26 +230,26 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west-ii/evening-light-bryce-canyon.html">
-          <img src="/assets/photographs/thumbs/evening-light-bryce-canyon.jpg" alt="Evening Light">
-          <h4>Evening Light</h4>
+        <a href="/portfolios/the-american-west-ii/twilight-garrapata.html">
+          <img src="/assets/photographs/thumbs/twilight-garrapata.jpg" alt="Twilight, Garrapata">
+          <h4>Twilight, Garrapata</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west-ii/sea-slot-pacific-coast.html">
-          <img src="/assets/photographs/thumbs/sea-slot-pacific-coast.jpg" alt="Sea Slot">
-          <h4>Sea Slot</h4>
+        <a href="/portfolios/the-american-west-ii/twilight-painted-hills.html">
+          <img src="/assets/photographs/thumbs/twilight-painted-hills.jpg" alt="Twilight, Painted Hills">
+          <h4>Twilight, Painted Hills</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west-ii/winter-oak-yosemite-national-park.html">
-          <img src="/assets/photographs/thumbs/winter-oak-yosemite-national-park.jpg" alt="Winter Oak">
-          <h4>Winter Oak</h4>
+        <a href="/portfolios/the-american-west-ii/two-oaks-sierra-foothills.html">
+          <img src="/assets/photographs/thumbs/two-oaks-sierra-foothills.jpg" alt="Two Oaks">
+          <h4>Two Oaks</h4>
         </a>
       </div>
 <div class="thumb">
         <a href="/portfolios/the-american-west-ii/workings-of-time-monument-valley.html">
-          <img src="/assets/photographs/thumbs/workings-of-time-monument-valley.jpg" alt="Workings of Time">
+          <img src="/assets/photographs/thumbs//assets/photographs/thumbs/workings-of-time-monument-valley.jpg" alt="Workings of Time">
           <h4>Workings of Time</h4>
         </a>
       </div>
