--- a/public/portfolios/zion-national-park-ancient-sands/index.html
+++ b/public/portfolios/zion-national-park-ancient-sands/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Zion National Park - Ancient Sands">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,51 +116,15 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/pink-tapestry-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/pink-tapestry-zion-national-park.jpg" alt="Pink Tapestry">
-          <h4>Pink Tapestry</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/two-stones-and-a-moon-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/two-stones-and-a-moon-zion-national-park.jpg" alt="Two Stones and a Moon">
-          <h4>Two Stones and a Moon</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/the-cosmic-wall-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
-          <h4>The Cosmic Wall</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/fire-rock-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/fire-rock-zion-national-park.jpg" alt="Fire Rock">
-          <h4>Fire Rock</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/eight-stones-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/eight-stones-zion-national-park.jpg" alt="Eight Stones">
-          <h4>Eight Stones</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/swirls-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/swirls-zion-national-park.jpg" alt="Swirls">
-          <h4>Swirls</h4>
+        <a href="/portfolios/zion-national-park-ancient-sands/cross-bedding-02-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/cross-bedding-02-zion-national-park.jpg" alt="Cross Bedding #2">
+          <h4>Cross Bedding #2</h4>
         </a>
       </div>
 <div class="thumb">
         <a href="/portfolios/zion-national-park-ancient-sands/cross-bedding-zion-national-park.html">
           <img src="/assets/photographs/thumbs/cross-bedding-zion-national-park.jpg" alt="Cross Bedding">
           <h4>Cross Bedding</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/cross-bedding-02-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/cross-bedding-02-zion-national-park.jpg" alt="Cross Bedding #2">
-          <h4>Cross Bedding #2</h4>
         </a>
       </div>
 <div class="thumb">
@@ -176,9 +140,21 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park-ancient-sands/eight-stones-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/eight-stones-zion-national-park.jpg" alt="Eight Stones">
+          <h4>Eight Stones</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park-ancient-sands/etchings-zion-national-park.html">
           <img src="/assets/photographs/thumbs/etchings-zion-national-park.jpg" alt="Etchings">
           <h4>Etchings</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-ancient-sands/fire-rock-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/fire-rock-zion-national-park.jpg" alt="Fire Rock">
+          <h4>Fire Rock</h4>
         </a>
       </div>
 <div class="thumb">
@@ -194,15 +170,21 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park-ancient-sands/zion-national-park-ancient-sands.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Zion National Park - Ancient Sands">
+          <h4>Zion National Park - Ancient Sands</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park-ancient-sands/layered-stone-zion-national-park.html">
           <img src="/assets/photographs/thumbs/layered-stone-zion-national-park.jpg" alt="Layered Stone">
           <h4>Layered Stone</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/mud-patterns-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/mud-patterns-zion-national-park.jpg" alt="Mud Patterns">
-          <h4>Mud Patterns</h4>
+        <a href="/portfolios/zion-national-park-ancient-sands/pink-tapestry-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/pink-tapestry-zion-national-park.jpg" alt="Pink Tapestry">
+          <h4>Pink Tapestry</h4>
         </a>
       </div>
 <div class="thumb">
@@ -212,9 +194,15 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/three-faces-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/three-faces-zion-national-park.jpg" alt="Three Faces">
-          <h4>Three Faces</h4>
+        <a href="/portfolios/zion-national-park-ancient-sands/swirls-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/swirls-zion-national-park.jpg" alt="Swirls">
+          <h4>Swirls</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-ancient-sands/the-cosmic-wall-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/the-cosmic-wall-zion-national-park.jpg" alt="The Cosmic Wall">
+          <h4>The Cosmic Wall</h4>
         </a>
       </div>
 <div class="thumb">
@@ -224,9 +212,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park-ancient-sands/water-holes-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/water-holes-zion-national-park.jpg" alt="Water Holes">
-          <h4>Water Holes</h4>
+        <a href="/portfolios/zion-national-park-ancient-sands/two-stones-and-a-moon-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/two-stones-and-a-moon-zion-national-park.jpg" alt="Two Stones and a Moon">
+          <h4>Two Stones and a Moon</h4>
         </a>
       </div>
 <div class="thumb">
