--- a/public/portfolios/zion-national-park-autumn-ii/index.html
+++ b/public/portfolios/zion-national-park-autumn-ii/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Zion National Park - Autumn II">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,75 +116,15 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/twilight-maples-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/twilight-maples-zion-national-park.jpg" alt="Twilight Maples">
-          <h4>Twilight Maples</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/luminous-pine-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/luminous-pine-zion-national-park.jpg" alt="Luminous Pine">
-          <h4>Luminous Pine</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/trees-of-life-i-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/trees-of-life-i-zion-national-park.jpg" alt="Trees of Life I">
-          <h4>Trees of Life I</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/leaves-pretending-to-be-water-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/leaves-pretending-to-be-water-zion-national-park.jpg" alt="Leaves Pretending to be Water">
-          <h4>Leaves Pretending to be Water</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/fertile-ground-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/fertile-ground-zion-national-park.jpg" alt="Fertile Ground">
-          <h4>Fertile Ground</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/maples-in-rain-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/maples-in-rain-zion-national-park.jpg" alt="Maples in Rain">
-          <h4>Maples in Rain</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/tree-of-life-ii-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/tree-of-life-ii-zion-national-park.jpg" alt="Tree of Life II">
-          <h4>Tree of Life II</h4>
+        <a href="/portfolios/zion-national-park-autumn-ii/artist-palette-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/artist-palette-zion-national-park.jpg" alt="Artist Palette">
+          <h4>Artist Palette</h4>
         </a>
       </div>
 <div class="thumb">
         <a href="/portfolios/zion-national-park-autumn-ii/bare-trees-and-foliage-zion-national-park.html">
           <img src="/assets/photographs/thumbs/bare-trees-and-foliage-zion-national-park.jpg" alt="Bare Trees and Foliage">
           <h4>Bare Trees and Foliage</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/solemnity-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/solemnity-zion-national-park.jpg" alt="Solemnity">
-          <h4>Solemnity</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/root-chaos-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/root-chaos-zion-national-park.jpg" alt="Root Chaos">
-          <h4>Root Chaos</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/morning-maples-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/morning-maples-zion-national-park.jpg" alt="Morning Maples">
-          <h4>Morning Maples</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/artist-palette-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/artist-palette-zion-national-park.jpg" alt="Artist Palette">
-          <h4>Artist Palette</h4>
         </a>
       </div>
 <div class="thumb">
@@ -200,6 +140,18 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/fertile-ground-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/fertile-ground-zion-national-park.jpg" alt="Fertile Ground">
+          <h4>Fertile Ground</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/zion-national-park-autumn-ii.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Zion National Park - Autumn II">
+          <h4>Zion National Park - Autumn II</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park-autumn-ii/leaf-chute-zion-national-park.html">
           <img src="/assets/photographs/thumbs/leaf-chute-zion-national-park.jpg" alt="Leaf Chute">
           <h4>Leaf Chute</h4>
@@ -212,15 +164,15 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn-ii/leaves-and-sky.html">
-          <img src="/assets/photographs/thumbs/leaves-and-sky.jpg" alt="Leaves and Sky">
-          <h4>Leaves and Sky</h4>
-        </a>
-      </div>
-<div class="thumb">
         <a href="/portfolios/zion-national-park-autumn-ii/leaves-on-sandstone-zion-national-park.html">
           <img src="/assets/photographs/thumbs/leaves-on-sandstone-zion-national-park.jpg" alt="Leaves on Sandstone">
           <h4>Leaves on Sandstone</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/leaves-pretending-to-be-water-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/leaves-pretending-to-be-water-zion-national-park.jpg" alt="Leaves Pretending to be Water">
+          <h4>Leaves Pretending to be Water</h4>
         </a>
       </div>
 <div class="thumb">
@@ -230,9 +182,57 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/luminous-pine-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/luminous-pine-zion-national-park.jpg" alt="Luminous Pine">
+          <h4>Luminous Pine</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/maples-in-rain-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/maples-in-rain-zion-national-park.jpg" alt="Maples in Rain">
+          <h4>Maples in Rain</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/morning-maples-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/morning-maples-zion-national-park.jpg" alt="Morning Maples">
+          <h4>Morning Maples</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park-autumn-ii/pink-maples-zion-national-park.html">
           <img src="/assets/photographs/thumbs/pink-maples-zion-national-park.jpg" alt="Pink Maples">
           <h4>Pink Maples</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/root-chaos-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/root-chaos-zion-national-park.jpg" alt="Root Chaos">
+          <h4>Root Chaos</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/solemnity-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/solemnity-zion-national-park.jpg" alt="Solemnity">
+          <h4>Solemnity</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/tree-of-life-ii-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/tree-of-life-ii-zion-national-park.jpg" alt="Tree of Life II">
+          <h4>Tree of Life II</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/trees-of-life-i-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/trees-of-life-i-zion-national-park.jpg" alt="Trees of Life I">
+          <h4>Trees of Life I</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn-ii/twilight-maples-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/twilight-maples-zion-national-park.jpg" alt="Twilight Maples">
+          <h4>Twilight Maples</h4>
         </a>
       </div>
 <div class="thumb">
