--- a/public/portfolios/zion-national-park-autumn/index.html
+++ b/public/portfolios/zion-national-park-autumn/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Zion National Park - Autumn">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,81 +116,15 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/maple-canopy-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/maple-canopy-zion-national-park.jpg" alt="Maple Canopy">
-          <h4>Maple Canopy</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/pink-and-yellow-maple-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/pink-and-yellow-maple-zion-national-park.jpg" alt="Pink and Yellow Maples">
-          <h4>Pink and Yellow Maples</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/pine-and-maples-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/pine-and-maples-zion-national-park.jpg" alt="Pine and Maples">
-          <h4>Pine and Maples</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/leaf-and-yucca-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/leaf-and-yucca-zion-national-park.jpg" alt="Leaf and Yucca">
-          <h4>Leaf and Yucca</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/radiant-trees-at-dusk-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/radiant-trees-at-dusk-zion-national-park.jpg" alt="Radiant Trees at Dusk">
-          <h4>Radiant Trees at Dusk</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/transitions-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/transitions-zion-national-park.jpg" alt="Transitions">
-          <h4>Transitions</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/last-leaves-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/last-leaves-zion-national-park.jpg" alt="Last Leaves">
-          <h4>Last Leaves</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/generations-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/generations-zion-national-park.jpg" alt="Generations">
-          <h4>Generations</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/leaves-reflecting-sky-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/leaves-reflecting-sky-zion-national-park.jpg" alt="Leaves Reflecting Sky">
-          <h4>Leaves Reflecting Sky</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/blushing-brides-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/blushing-brides-zion-national-park.jpg" alt="Blushing Brides">
-          <h4>Blushing Brides</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/blushing-brides-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/blushing-brides-zion-national-park.jpg" alt="Blushing Brides">
-          <h4>Blushing Brides</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-autumn/three-maples-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/three-maples-zion-national-park.jpg" alt="Three Maples">
-          <h4>Three Maples</h4>
-        </a>
-      </div>
-<div class="thumb">
         <a href="/portfolios/zion-national-park-autumn/autumn-symphony-zion-national-park.html">
           <img src="/assets/photographs/thumbs/autumn-symphony-zion-national-park.jpg" alt="Autumn Symphony">
           <h4>Autumn Symphony</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/blushing-brides-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/blushing-brides-zion-national-park.jpg" alt="Blushing Brides">
+          <h4>Blushing Brides</h4>
         </a>
       </div>
 <div class="thumb">
@@ -200,9 +134,39 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/generations-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/generations-zion-national-park.jpg" alt="Generations">
+          <h4>Generations</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/zion-national-park-autumn.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Zion National Park - Autumn">
+          <h4>Zion National Park - Autumn</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/last-leaves-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/last-leaves-zion-national-park.jpg" alt="Last Leaves">
+          <h4>Last Leaves</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/leaf-and-yucca-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/leaf-and-yucca-zion-national-park.jpg" alt="Leaf and Yucca">
+          <h4>Leaf and Yucca</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park-autumn/leaves-in-oily-water-zion-national-park.html">
           <img src="/assets/photographs/thumbs/leaves-in-oily-water-zion-national-park.jpg" alt="Leaves in Oily Water">
           <h4>Leaves in Oily Water</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/leaves-reflecting-sky-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/leaves-reflecting-sky-zion-national-park.jpg" alt="Leaves Reflecting Sky">
+          <h4>Leaves Reflecting Sky</h4>
         </a>
       </div>
 <div class="thumb">
@@ -218,6 +182,12 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/maple-canopy-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/maple-canopy-zion-national-park.jpg" alt="Maple Canopy">
+          <h4>Maple Canopy</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park-autumn/old-and-new-zion-national-park.html">
           <img src="/assets/photographs/thumbs/old-and-new-zion-national-park.jpg" alt="Old and New">
           <h4>Old and New</h4>
@@ -230,9 +200,39 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/pine-and-maples-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/pine-and-maples-zion-national-park.jpg" alt="Pine and Maples">
+          <h4>Pine and Maples</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/pink-and-yellow-maple-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/pink-and-yellow-maple-zion-national-park.jpg" alt="Pink and Yellow Maples">
+          <h4>Pink and Yellow Maples</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/radiant-trees-at-dusk-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/radiant-trees-at-dusk-zion-national-park.jpg" alt="Radiant Trees at Dusk">
+          <h4>Radiant Trees at Dusk</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park-autumn/tapestry-in-yellow-zion-national-park.html">
           <img src="/assets/photographs/thumbs/tapestry-in-yellow-zion-national-park.jpg" alt="Tapestry in Yellow">
           <h4>Tapestry in Yellow</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/three-maples-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/three-maples-zion-national-park.jpg" alt="Three Maples">
+          <h4>Three Maples</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-autumn/transitions-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/transitions-zion-national-park.jpg" alt="Transitions">
+          <h4>Transitions</h4>
         </a>
       </div>
 <div class="thumb">
