--- a/public/portfolios/zion-national-park-watercourse-way/index.html
+++ b/public/portfolios/zion-national-park-watercourse-way/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Zion National Park - Watercourse Way">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,9 +116,9 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-subway-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-subway-zion-national-park.jpg" alt="Reflections">
-          <h4>Reflections</h4>
+        <a href="/portfolios/zion-national-park-watercourse-way/a-moment-in-time-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/a-moment-in-time-zion-national-park.jpg" alt="A Moment in Time">
+          <h4>A Moment in Time</h4>
         </a>
       </div>
 <div class="thumb">
@@ -128,27 +128,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-14-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-14-zion-national-park.jpg" alt="Reflections #14">
-          <h4>Reflections #14</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-03-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-03-zion-national-park.jpg" alt="Reflections #3">
-          <h4>Reflections #3</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/velvet-reflections-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/velvet-reflections-zion-national-park.jpg" alt="Velvet Reflections">
-          <h4>Velvet Reflections</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/a-moment-in-time-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/a-moment-in-time-zion-national-park.jpg" alt="A Moment in Time">
-          <h4>A Moment in Time</h4>
+        <a href="/portfolios/zion-national-park-watercourse-way/zion-national-park-watercourse-way.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Zion National Park - Watercourse Way">
+          <h4>Zion National Park - Watercourse Way</h4>
         </a>
       </div>
 <div class="thumb">
@@ -164,33 +146,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-10-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-10-zion-national-park.jpg" alt="Reflections #10">
-          <h4>Reflections #10</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-11-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-11-zion-national-park.jpg" alt="Reflections #11">
-          <h4>Reflections #11</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-12-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-12-zion-national-park.jpg" alt="Reflections #12">
-          <h4>Reflections #12</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-13-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-13-zion-national-park.jpg" alt="Reflections #13">
-          <h4>Reflections #13</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park-watercourse-way/reflections-02-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/reflections-02-zion-national-park.jpg" alt="Reflections #2">
-          <h4>Reflections #2</h4>
+        <a href="/portfolios/zion-national-park-watercourse-way/reflections-03-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/reflections-03-zion-national-park.jpg" alt="Reflections #3">
+          <h4>Reflections #3</h4>
         </a>
       </div>
 <div class="thumb">
@@ -221,6 +179,42 @@
         <a href="/portfolios/zion-national-park-watercourse-way/reflections-08-zion-national-park.html">
           <img src="/assets/photographs/thumbs/reflections-08-zion-national-park.jpg" alt="Reflections #8">
           <h4>Reflections #8</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-watercourse-way/reflections-10-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/reflections-10-zion-national-park.jpg" alt="Reflections #10">
+          <h4>Reflections #10</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-watercourse-way/reflections-11-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/reflections-11-zion-national-park.jpg" alt="Reflections #11">
+          <h4>Reflections #11</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-watercourse-way/reflections-12-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/reflections-12-zion-national-park.jpg" alt="Reflections #12">
+          <h4>Reflections #12</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-watercourse-way/reflections-14-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/reflections-14-zion-national-park.jpg" alt="Reflections #14">
+          <h4>Reflections #14</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-watercourse-way/reflections-subway-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/reflections-subway-zion-national-park.jpg" alt="Reflections">
+          <h4>Reflections</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park-watercourse-way/velvet-reflections-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/velvet-reflections-zion-national-park.jpg" alt="Velvet Reflections">
+          <h4>Velvet Reflections</h4>
         </a>
       </div>
       </div>
