--- a/public/portfolios/icons-of-agriculture-ii/index.html
+++ b/public/portfolios/icons-of-agriculture-ii/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Icons of Agriculture II">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,45 +116,9 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/details-cheyenne.html">
-          <img src="/assets/photographs/thumbs/details-cheyenne.jpg" alt="Details">
-          <h4>Details</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/weathered-door-salinas.html">
-          <img src="/assets/photographs/thumbs/weathered-door-salinas.jpg" alt="Fractures">
-          <h4>Fractures</h4>
-        </a>
-      </div>
-<div class="thumb">
         <a href="/portfolios/icons-of-agriculture-ii/air-pipes-chandon.html">
           <img src="/assets/photographs/thumbs/air-pipes-chandon.jpg" alt="Air Pipes">
           <h4>Air Pipes</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/granary-detail-cortena.html">
-          <img src="/assets/photographs/thumbs/granary-detail-cortena.jpg" alt="Twilight">
-          <h4>Twilight</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/stacks-and-ladder-cortena.html">
-          <img src="/assets/photographs/thumbs/stacks-and-ladder-cortena.jpg" alt="Stacks and Ladder">
-          <h4>Stacks and Ladder</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/luminance-dufur.html">
-          <img src="/assets/photographs/thumbs/luminance-dufur.jpg" alt="Luminance">
-          <h4>Luminance</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/grain-truck-endicott.html">
-          <img src="/assets/photographs/thumbs/grain-truck-endicott.jpg" alt="Grain Truck">
-          <h4>Grain Truck</h4>
         </a>
       </div>
 <div class="thumb">
@@ -164,21 +128,57 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/no-808-harrington.html">
-          <img src="/assets/photographs/thumbs/no-808-harrington.jpg" alt="No. 808">
-          <h4>No. 808</h4>
+        <a href="/portfolios/icons-of-agriculture-ii/details-cheyenne.html">
+          <img src="/assets/photographs/thumbs/details-cheyenne.jpg" alt="Details">
+          <h4>Details</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/warm-and-cool-ione.html">
-          <img src="/assets/photographs/thumbs/warm-and-cool-ione.jpg" alt="Warm and Cool">
-          <h4>Warm and Cool</h4>
+        <a href="/portfolios/icons-of-agriculture-ii/forms-walters.html">
+          <img src="/assets/photographs/thumbs/forms-walters.jpg" alt="Forms">
+          <h4>Forms</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-ii/grain-truck-endicott.html">
+          <img src="/assets/photographs/thumbs/grain-truck-endicott.jpg" alt="Grain Truck">
+          <h4>Grain Truck</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-ii/granary-and-moon-walters.html">
+          <img src="/assets/photographs/thumbs/granary-and-moon-walters.jpg" alt="Granary and Moon">
+          <h4>Granary and Moon</h4>
         </a>
       </div>
 <div class="thumb">
         <a href="/portfolios/icons-of-agriculture-ii/granary-at-dusk-the-palouse.html">
           <img src="/assets/photographs/thumbs/granary-at-dusk-the-palouse.jpg" alt="Last Light">
           <h4>Last Light</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-ii/granary-detail-cortena.html">
+          <img src="/assets/photographs/thumbs/granary-detail-cortena.jpg" alt="Twilight">
+          <h4>Twilight</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-ii/icons-of-agriculture-ii.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Icons of Agriculture II">
+          <h4>Icons of Agriculture II</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-ii/luminance-dufur.html">
+          <img src="/assets/photographs/thumbs/luminance-dufur.jpg" alt="Luminance">
+          <h4>Luminance</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-ii/no-808-harrington.html">
+          <img src="/assets/photographs/thumbs/no-808-harrington.jpg" alt="No. 808">
+          <h4>No. 808</h4>
         </a>
       </div>
 <div class="thumb">
@@ -194,15 +194,21 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/forms-walters.html">
-          <img src="/assets/photographs/thumbs/forms-walters.jpg" alt="Forms">
-          <h4>Forms</h4>
+        <a href="/portfolios/icons-of-agriculture-ii/stacks-and-ladder-cortena.html">
+          <img src="/assets/photographs/thumbs/stacks-and-ladder-cortena.jpg" alt="Stacks and Ladder">
+          <h4>Stacks and Ladder</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/granary-and-moon-walters.html">
-          <img src="/assets/photographs/thumbs/granary-and-moon-walters.jpg" alt="Granary and Moon">
-          <h4>Granary and Moon</h4>
+        <a href="/portfolios/icons-of-agriculture-ii/warm-and-cool-ione.html">
+          <img src="/assets/photographs/thumbs/warm-and-cool-ione.jpg" alt="Warm and Cool">
+          <h4>Warm and Cool</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/icons-of-agriculture-ii/weathered-door-salinas.html">
+          <img src="/assets/photographs/thumbs/weathered-door-salinas.jpg" alt="Fractures">
+          <h4>Fractures</h4>
         </a>
       </div>
       </div>
