--- a/public/portfolios/the-american-west/index.html
+++ b/public/portfolios/the-american-west/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="The American West">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,63 +116,15 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/the-american-west/winter-oak-at-sunset-catheys-valley.html">
-          <img src="/assets/photographs/thumbs/winter-oak-at-sunset-catheys-valley.jpg" alt="Winter Oak at Sunset">
-          <h4>Winter Oak at Sunset</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/lightning-china-hat-road-oregon.html">
-          <img src="/assets/photographs/thumbs/lightning-china-hat-road-oregon.jpg" alt="Lightning">
-          <h4>Lightning</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/stream-of-light-white-mountains.html">
-          <img src="/assets/photographs/thumbs/stream-of-light-white-mountains.jpg" alt="Stream of Light">
-          <h4>Stream of Light</h4>
+        <a href="/portfolios/the-american-west/ancient-bristlecone-pine-white-mountains.html">
+          <img src="/assets/photographs/thumbs/ancient-bristlecone-pine-white-mountains.jpg" alt="Ancient Bristlecone Pine">
+          <h4>Ancient Bristlecone Pine</h4>
         </a>
       </div>
 <div class="thumb">
         <a href="/portfolios/the-american-west/aspen-canopy-crested-butte.html">
           <img src="/assets/photographs/thumbs/aspen-canopy-crested-butte.jpg" alt="Aspen Canopy at Dusk">
           <h4>Aspen Canopy at Dusk</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/ferns-and-aspens-crested-butte.html">
-          <img src="/assets/photographs/thumbs/ferns-and-aspens-crested-butte.jpg" alt="Ferns and Aspens">
-          <h4>Ferns and Aspens</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/granite-gone-wild-merced-canyon.html">
-          <img src="/assets/photographs/thumbs/granite-gone-wild-merced-canyon.jpg" alt="Granite Gone Wild">
-          <h4>Granite Gone Wild</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/morning-light-monument-valley.html">
-          <img src="/assets/photographs/thumbs/morning-light-monument-valley.jpg" alt="Morning Light">
-          <h4>Morning Light</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/storm-moving-over-mesa-big-water.html">
-          <img src="/assets/photographs/thumbs/storm-moving-over-mesa-big-water.jpg" alt="Storm Moving Over Mesa">
-          <h4>Storm Moving Over Mesa</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/white-river-falls-oregon.html">
-          <img src="/assets/photographs/thumbs/white-river-falls-oregon.jpg" alt="White River Falls">
-          <h4>White River Falls</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/the-american-west/ancient-bristlecone-pine-white-mountains.html">
-          <img src="/assets/photographs/thumbs/ancient-bristlecone-pine-white-mountains.jpg" alt="Ancient Bristlecone Pine">
-          <h4>Ancient Bristlecone Pine</h4>
         </a>
       </div>
 <div class="thumb">
@@ -200,14 +152,50 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west/sahalie-falls-mckenzie-river.html">
-          <img src="/assets/photographs/thumbs/sahalie-falls-mckenzie-river.jpg" alt="Sahalie Falls">
-          <h4>Sahalie Falls</h4>
+        <a href="/portfolios/the-american-west/evening-light-bryce-canyon.html">
+          <img src="/assets/photographs/thumbs/evening-light-bryce-canyon.jpg" alt="Evening Light">
+          <h4>Evening Light</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west/sahalie-falls-oregon.html">
-          <img src="/assets/photographs/thumbs/sahalie-falls-oregon.jpg" alt="Sahalie Falls">
+        <a href="/portfolios/the-american-west/ferns-and-aspens-crested-butte.html">
+          <img src="/assets/photographs/thumbs/ferns-and-aspens-crested-butte.jpg" alt="Ferns and Aspens">
+          <h4>Ferns and Aspens</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/granite-gone-wild-merced-canyon.html">
+          <img src="/assets/photographs/thumbs/granite-gone-wild-merced-canyon.jpg" alt="Granite Gone Wild">
+          <h4>Granite Gone Wild</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/the-american-west.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="The American West">
+          <h4>The American West</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/lightning-china-hat-road-oregon.html">
+          <img src="/assets/photographs/thumbs/lightning-china-hat-road-oregon.jpg" alt="Lightning">
+          <h4>Lightning</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/morning-light-monument-valley.html">
+          <img src="/assets/photographs/thumbs/morning-light-monument-valley.jpg" alt="Morning Light">
+          <h4>Morning Light</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/reflections-11-merced-river-yosemite.html">
+          <img src="/assets/photographs/thumbs/reflections-11-merced-river-yosemite.jpg" alt="Reflections #11">
+          <h4>Reflections #11</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/sahalie-falls-mckenzie-river.html">
+          <img src="/assets/photographs/thumbs/sahalie-falls-mckenzie-river.jpg" alt="Sahalie Falls">
           <h4>Sahalie Falls</h4>
         </a>
       </div>
@@ -230,15 +218,45 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west/smoked-oregon.html">
-          <img src="/assets/photographs/thumbs/smoked-oregon.jpg" alt="Smoked">
-          <h4>Smoked</h4>
+        <a href="/portfolios/the-american-west/sea-slot-pacific-coast.html">
+          <img src="/assets/photographs/thumbs/sea-slot-pacific-coast.jpg" alt="Sea Slot">
+          <h4>Sea Slot</h4>
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/the-american-west/reflections-11-merced-river-yosemite.html">
-          <img src="/assets/photographs/thumbs/reflections-11-merced-river-yosemite.jpg" alt="Reflections #11">
-          <h4>Reflections #11</h4>
+        <a href="/portfolios/the-american-west/storm-moving-over-mesa-big-water.html">
+          <img src="/assets/photographs/thumbs/storm-moving-over-mesa-big-water.jpg" alt="Storm Moving Over Mesa">
+          <h4>Storm Moving Over Mesa</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/stream-of-light-white-mountains.html">
+          <img src="/assets/photographs/thumbs/stream-of-light-white-mountains.jpg" alt="Stream of Light">
+          <h4>Stream of Light</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/white-river-falls-oregon.html">
+          <img src="/assets/photographs/thumbs/white-river-falls-oregon.jpg" alt="White River Falls">
+          <h4>White River Falls</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/winter-oak-at-sunset-catheys-valley.html">
+          <img src="/assets/photographs/thumbs/winter-oak-at-sunset-catheys-valley.jpg" alt="Winter Oak at Sunset">
+          <h4>Winter Oak at Sunset</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/winter-oak-yosemite-national-park.html">
+          <img src="/assets/photographs/thumbs/winter-oak-yosemite-national-park.jpg" alt="Winter Oak">
+          <h4>Winter Oak</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/the-american-west/workings-of-time-monument-valley.html">
+          <img src="/assets/photographs/thumbs/workings-of-time-monument-valley.jpg" alt="Workings of Time">
+          <h4>Workings of Time</h4>
         </a>
       </div>
       </div>
