--- a/public/portfolios/zion-national-park/index.html
+++ b/public/portfolios/zion-national-park/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="30">
     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="Zion National Park">
+<body id="">
   <div id="top">
   <div id="top-inner">
     <header id="header">
@@ -63,9 +63,9 @@
         </div>
         <ul class="navSection" id="navCibachrome">
           <li><a href="/cibachrome">Overview</a></li>
-          <li><a href="/cibachrome/darkroom">Darkroom</a></li>
-          <li><a href="/cibachrome/display-and-care">Display &amp; Care</a></li>
-          <li><a href="/cibachrome/history">History</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
         </ul>
       </div>
 
@@ -79,10 +79,10 @@
         </div>
         <ul class="navSection" id="navPrintsBooks">
           <li><a href="/prints-books">Overview</a></li>
-          <li><a href="/prints-books/print-types">Print Types</a></li>
-          <li><a href="/prints-books/framing-and-display">Framing and Display</a></li>
-          <li><a href="/prints-books/care-and-conservation">Care and Conservation</a></li>
-          <li><a href="/prints-books/purchase">Purchase Inquiry</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
         </ul>
       </div>
 
@@ -100,7 +100,7 @@
         </div>
         <ul class="navSection" id="navAbout">
           <li><a href="/about">Statement</a></li>
-          <li><a href="/about/my-story">My Story</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
           <li><a href="/about/inspiration/">Inspiration</a></li>
         </ul>
       </div>
@@ -116,78 +116,6 @@
     <div class="row">
       <div id="thumbs">
         <div class="thumb">
-        <a href="/portfolios/zion-national-park/leaf-and-sand-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/leaf-and-sand-zion-national-park.jpg" alt="Leaf and Sand">
-          <h4>Leaf and Sand</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/the-way-of-wood-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/the-way-of-wood-zion-national-park.jpg" alt="The Topography of Wood">
-          <h4>The Topography of Wood</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/in-the-shadow-of-stone-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/in-the-shadow-of-stone-zion-national-park.jpg" alt="In the Shadow of Stone">
-          <h4>In the Shadow of Stone</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/canyon-light-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/canyon-light-zion-national-park.jpg" alt="Canyon Light">
-          <h4>Canyon Light</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/glowing-grasses-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/glowing-grasses-zion-national-park.jpg" alt="Glowing Grasses">
-          <h4>Glowing Grasses</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/springtime-melody-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/springtime-melody-zion-national-park.jpg" alt="Springtime Melody">
-          <h4>Springtime Melody</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/old-friends-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/old-friends-zion-national-park.jpg" alt="Old Friends">
-          <h4>Old Friends</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/midnight-over-big-bend-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/midnight-over-big-bend-zion-national-park.jpg" alt="Midnight over Big Bend">
-          <h4>Midnight over Big Bend</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/remnants-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/remnants-zion-national-park.jpg" alt="Remnants">
-          <h4>Remnants</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/winter-cottonwoods-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/winter-cottonwoods-zion-national-park.jpg" alt="Winter Cottonwoods">
-          <h4>Winter Cottonwoods</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/cosmic-lichen-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/cosmic-lichen-zion-national-park.jpg" alt="Cosmic Lichen">
-          <h4>Cosmic Lichen</h4>
-        </a>
-      </div>
-<div class="thumb">
-        <a href="/portfolios/zion-national-park/sunset-kinesava-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/sunset-kinesava-zion-national-park.jpg" alt="Sunset, Kinesava">
-          <h4>Sunset, Kinesava</h4>
-        </a>
-      </div>
-<div class="thumb">
         <a href="/portfolios/zion-national-park/a-good-resting-place-zion-national-park.html">
           <img src="/assets/photographs/thumbs/a-good-resting-place-zion-national-park.jpg" alt="A Good Resting Place">
           <h4>A Good Resting Place</h4>
@@ -200,9 +128,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park/cliff-and-pine-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/cliff-and-pine-zion-national-park.jpg" alt="Cliff & Pines">
-          <h4>Cliff & Pines</h4>
+        <a href="/portfolios/zion-national-park/canyon-light-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/canyon-light-zion-national-park.jpg" alt="Canyon Light">
+          <h4>Canyon Light</h4>
         </a>
       </div>
 <div class="thumb">
@@ -212,9 +140,45 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park/cosmic-lichen-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/cosmic-lichen-zion-national-park.jpg" alt="Cosmic Lichen">
+          <h4>Cosmic Lichen</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/glowing-grasses-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/glowing-grasses-zion-national-park.jpg" alt="Glowing Grasses">
+          <h4>Glowing Grasses</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/in-the-shadow-of-stone-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/in-the-shadow-of-stone-zion-national-park.jpg" alt="In the Shadow of Stone">
+          <h4>In the Shadow of Stone</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/zion-national-park.html">
+          <img src="/assets/photographs/thumbs/undefined" alt="Zion National Park">
+          <h4>Zion National Park</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/leaf-and-sand-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/leaf-and-sand-zion-national-park.jpg" alt="Leaf and Sand">
+          <h4>Leaf and Sand</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park/lone-pine-zion-national-park.html">
           <img src="/assets/photographs/thumbs/lone-pine-zion-national-park.jpg" alt="Lone Pine">
           <h4>Lone Pine</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/midnight-over-big-bend-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/midnight-over-big-bend-zion-national-park.jpg" alt="Midnight over Big Bend">
+          <h4>Midnight over Big Bend</h4>
         </a>
       </div>
 <div class="thumb">
@@ -230,9 +194,39 @@
         </a>
       </div>
 <div class="thumb">
+        <a href="/portfolios/zion-national-park/old-friends-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/old-friends-zion-national-park.jpg" alt="Old Friends">
+          <h4>Old Friends</h4>
+        </a>
+      </div>
+<div class="thumb">
         <a href="/portfolios/zion-national-park/remnants-of-water-zion-national-park.html">
           <img src="/assets/photographs/thumbs/remnants-of-water-zion-national-park.jpg" alt="Remnants of Water">
           <h4>Remnants of Water</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/remnants-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/remnants-zion-national-park.jpg" alt="Remnants">
+          <h4>Remnants</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/springtime-melody-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/springtime-melody-zion-national-park.jpg" alt="Springtime Melody">
+          <h4>Springtime Melody</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/sunset-kinesava-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/sunset-kinesava-zion-national-park.jpg" alt="Sunset, Kinesava">
+          <h4>Sunset, Kinesava</h4>
+        </a>
+      </div>
+<div class="thumb">
+        <a href="/portfolios/zion-national-park/the-way-of-wood-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/the-way-of-wood-zion-national-park.jpg" alt="The Topography of Wood">
+          <h4>The Topography of Wood</h4>
         </a>
       </div>
 <div class="thumb">
@@ -242,9 +236,9 @@
         </a>
       </div>
 <div class="thumb">
-        <a href="/portfolios/zion-national-park/yucca-zion-national-park.html">
-          <img src="/assets/photographs/thumbs/yucca-zion-national-park.jpg" alt="Yucca">
-          <h4>Yucca</h4>
+        <a href="/portfolios/zion-national-park/winter-cottonwoods-zion-national-park.html">
+          <img src="/assets/photographs/thumbs/winter-cottonwoods-zion-national-park.jpg" alt="Winter Cottonwoods">
+          <h4>Winter Cottonwoods</h4>
         </a>
       </div>
       </div>
